changed back to previous alignment, as fix for defect 510 did not work

--- a/node-app/src/views/core/components/content/icon-text/style.scss
+++ b/node-app/src/views/core/components/content/icon-text/style.scss
@@ -35,7 +35,7 @@
     .icon-texts{
         margin-top: 16px;
         a {
-            text-align: right;//changed from center to right
+            text-align: center;
             font-size: 1rem;
         }
     }
